RESOLVED FIXED17321
Fixes for a few wx issues
https://bugs.webkit.org/show_bug.cgi?id=17321
Summary Fixes for a few wx issues
Kevin Ollivier
Reported 2008-02-11 22:39:50 PST
These are a few bugfixes for the wx port. specifically: - Make sure wx headers are included before windows.h so that it is properly configured - Pass font info UTF8 string to the 8-bit friendly version of computeHash - Fix for drawing origin when using wxGCDC (aka GDIPlus/Cairo/CoreGraphics mode) - Update wxPython bindings after renaming of a wxWebKit event.
Attachments
Fixes for wx port bugs (4.19 KB, patch)
2008-02-11 22:40 PST, Kevin Ollivier
darin: review+
Kevin Ollivier
Comment 1 2008-02-11 22:40:56 PST
Created attachment 19088 [details] Fixes for wx port bugs
Darin Adler
Comment 2 2008-02-13 04:46:46 PST
Comment on attachment 19088 [details] Fixes for wx port bugs All looks fine. What is MSW? r=me
Kevin Ollivier
Comment 3 2008-02-13 09:10:16 PST
Sorry, MSW = MicroSoft Windows :-)
Kevin Ollivier
Comment 4 2008-02-13 09:51:20 PST
Landed in r30204. Thanks!
Note You need to log in before you can comment on or make changes to this bug.