Fix issues with the paint origin when using wxGCDC, with computing the font platform data hash, and Win and wxPython bindings compilation. http://bugs.webkit.org/show_bug.cgi?id=17321

Canonical link: https://commits.webkit.org/24012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30204 268f45cc-cd09-0410-ab3c-d52691b4dbfc