WebCore/platform/graphics/wx/FontPlatformData.h
@@ -76,7 +76,7 @@ public:
         case UNINITIALIZED:
             return 0;
         case VALID:
-            return m_fontHash;              
+            return computeHash();              
         }
     }
 
@@ -89,9 +89,9 @@ public:
     }
     
     unsigned computeHash() const {
+        ASSERT(m_font.Ok());
         wxCharBuffer charBuffer(m_font.GetNativeFontInfoDesc().mb_str(wxConvUTF8));
-        const char* contents = charBuffer;        
-        return StringImpl::computeHash( (UChar*)contents, strlen(contents));
+        return StringImpl::computeHash(charBuffer.data());
     }
 
 private:
